# event-driven-programming-outcome

./: .gitignore  Cargo.toml  README.md  build.rs  entries.json  main.rs  rust-toolchain.toml  tauri.conf.json
design/: Likert Scale.docx  build.sh  document.md  sources.md  state.puml  use-case-diagram.puml  use-case.puml
design/diagrams/: use-case.puml
design/documentation/: state.puml
design/evidence/: Likert Scale.docx  georgi-mirchev.docx
design/individual/: build.sh  document.md
edp-outcome/: entries.json
edp-outcome/entries/: example
frontend/: index.html  index.js
