[package]
authors      = [""]
description  = "A Tauri App"
edition      = "2021"
license      = ""
name         = "app"
repository   = ""
rust-version = "1.81"
version      = "0.1.0"

[[bin]]
path = "main.rs"
name = "main"

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
markdown   = "0.3.0"
proptest = "1.6.0"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri      = { version = "2.2.4", features = [] }
